--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/mhineMhe/mqttBrowser#readme",
   "engines": {
-    "node": "10.x"
+    "node": "10.15"
   },
   "dependencies": {
     "express": "^4.17.1"
